--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
 <!-- Featured Listings with Interactive Grid -->
 <section class="featured-listings py-5">
     <div class="container">
-        <h2 class="text-center mb-5">Our Handpicked Listings</h2>
+        <h2 class="text-center mb-5">Hot Listings</h2>
         <div class="row" id="listings-container">
             {% for listing in featured_listings %}
                 <div class="col-lg-4 col-md-6 mb-4 listing-card" data-location-id="{{ listing.location.id }}">
