--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,8 @@
 <!-- Intro Section with Fluid Animations -->
 <section class="intro-section">
     <div class="container text-center">
-        <h1 class="display-3 font-weight-bold">Exceptional Stays</h1>
-        <p class="lead mt-3">Explore unique homes, unforgettable experiences, and endless possibilities.</p>
+        <h2 class="display-3 font-weight-bold">Coastal Chic on a Budget</h2>
+        <p class="lead mt-3">Clean, Luxurious, and Smart Stays in Mombasa, Diani, and Malindi.</p>
         <a href="{{ url_for('listings.list_listings') }}" class="btn btn-explore btn-lg mt-4">Explore Listings</a>
     </div>
 </section>
