--- a/app/templates/owners/my_listings.html
+++ b/app/templates/owners/my_listings.html
@@ -1,4 +1,3 @@
-
 {% extends 'owners/base.html' %}
 
 {% block content %}
@@ -24,6 +23,9 @@
                         </a>
                         <a href="{{ url_for('listings.upload_images', listing_id=listing.id) }}" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="Upload Images">
                             <i class="fas fa-upload"></i>
+                        </a>
+                        <a href="{{ url_for('owners.tag_amenities', listing_id=listing.id) }}" class="btn btn-success btn-sm" data-toggle="tooltip" title="Tag Amenities">
+                            <i class="fas fa-tags"></i>
                         </a>
                         <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteModal{{ listing.id }}" title="Delete">
                             <i class="fas fa-trash"></i>
